[package]
name = "DPM-Core"
version = "0.1.0"
edition = "2021"
authors = ["Derrick Lin"]
description = "DPM-Core is for DPM-Server & DPM-Client."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/End-YYDS/DPM-Core"
documentation = "https://docs.rs/dpm_core"
keywords = ["dpm", "repo", "Core", "self", "system"]
categories = ["command-line-utilities"]

[lib]
name = "dpm_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.94"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros"] }
