[package]
name = "DPM-Core"
version = "0.1.2"
edition = "2021"
authors = ["Derrick Lin"]
description = "DPM-Core is for DPM-Server & DPM-Client."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Derrick-Program/DPM-Core"
documentation = "https://docs.rs/dpm_core"
keywords = ["dpm", "repo", "Core", "self", "system"]
categories = ["command-line-utilities"]

[lib]
name = "dpm_core"
path = "src/lib.rs"

[features]
server = []
client = []

[dependencies]
anyhow = "1.0.94"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["stream", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "fs"] }
